added and modified files

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -73,6 +73,15 @@ html
         .content
           .container-fluid
             block content
+      
+      footer.main-footer
+        div(class="float-right d-none d-sm-block")
+          b Version
+          |  3.0.0
+        strong
+          | Copyright &copy; 2019-2020
+          a(href="/mmi-admin-dashboard")  MMI Scraper Dasboard
+        |  All rights reserved.
 
 
     script(src="/admin-lte-3/plugins/jquery/jquery.min.js")
